crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__definitions_tests__named_def_then_expression.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Expr = [(identifier) (number)]
(program (Expr) @value)
---
error: definition must be named
  |
2 | (program (Expr) @value)
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: give it a name like `Name = (program (Expr) @value)`
